svcomp/gh-615.2/new2/results/esbmc-kind.2022-02-15_19-50-02.logfiles/SV-COMP22_unreach-call.linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.yml.log
./esbmc-wrapper.py -p ../sv-benchmarks/c/properties/unreach-call.prp -s kinduction --arch 64 ../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i


--------------------------------------------------------------------------------


Verifying with ESBMC
Command: ./esbmc --no-div-by-zero-check --force-malloc-success --state-hashing --add-symex-value-sets --no-align-check --k-step 5 --floatbv --unlimited-k-steps ../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i --64 --witness-output linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i.graphml --no-pointer-check --no-bounds-check --interval-analysis --goto-unwind --unlimited-goto-unwind --k-induction --max-inductive-step 3 
ESBMC version 6.8.0 64-bit x86_64 linux
Target: 64-bit little-endian x86_64-unknown-linux with esbmc libc
file ../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i: Parsing

../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:77925:9: warning: incompatible pointer types assigning to 'const struct __anonstruct_phase_454 *' from 'const struct __anonstruct_456 *' [-Wincompatible-pointer-types]
  phase = (struct __anonstruct_456 const *)(& phases);
        ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:82451:6: error: cannot redeclare builtin function '__builtin_va_copy'
void __builtin_va_copy(__builtin_va_list , __builtin_va_list ) ;
     ^
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:82451:6: note: '__builtin_va_copy' is a builtin with type 'void (struct __va_list_tag *, struct __va_list_tag *)'
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:82454:12: warning: incompatible redeclaration of library function 'vsnprintf' [-Wincompatible-library-redeclaration]
extern int vsnprintf(char * , size_t , char const * , va_list * ) ;
           ^
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:82454:12: note: 'vsnprintf' is a builtin with type 'int (char *, unsigned long, const char *, struct __va_list_tag *)'
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:82876:23: warning: incompatible pointer types passing 'va_list *' (aka '__builtin_va_list *') to parameter of type 'struct __va_list_tag *' [-Wincompatible-pointer-types]
    __builtin_va_copy((va_list *)(& tmp___1), args);
                      ^~~~~~~~~~~~~~~~~~~~~~
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:82876:47: warning: incompatible pointer types passing 'va_list *' (aka '__builtin_va_list *') to parameter of type 'struct __va_list_tag *' [-Wincompatible-pointer-types]
    __builtin_va_copy((va_list *)(& tmp___1), args);
                                              ^~~~
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:123981:121: warning: pointer/integer type mismatch in conditional expression ('int' and 'struct drm_crtc *') [-Wconditional-type-mismatch]
    (*(intel_plane->disable_plane))(& intel_plane->base, (unsigned long )from != (unsigned long )((struct drm_crtc *)0) ? (unsigned long )from != (unsigned long )((struct drm_crtc *)0) : crtc,
                                                                                                                        ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~   ~~~~
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:139800:90: warning: incompatible pointer types initializing 'const struct dmi_system_id (*)[]' with an expression of type 'const struct dmi_system_id *' [-Wincompatible-pointer-types]
static struct intel_dmi_quirk const intel_dmi_quirks[1U] = { {& quirk_invert_brightness, (struct dmi_system_id const *)(& __constr_expr_0)}};
                                                                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:208953:26: warning: implicit declaration of function 'ldv_xmalloc' is invalid in C99 [-Wimplicit-function-declaration]
  return *(union ktime *)ldv_xmalloc(sizeof(union ktime));
                         ^
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:208953:11: warning: cast to 'union ktime *' from smaller integer type 'int' [-Wint-to-pointer-cast]
  return *(union ktime *)ldv_xmalloc(sizeof(union ktime));
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:208956:26: warning: implicit declaration of function 'ldv_xmalloc' is invalid in C99 [-Wimplicit-function-declaration]
  return *(union ktime *)ldv_xmalloc(sizeof(union ktime));
                         ^
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:208956:11: warning: cast to 'union ktime *' from smaller integer type 'int' [-Wint-to-pointer-cast]
  return *(union ktime *)ldv_xmalloc(sizeof(union ktime));
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:209334:28: warning: implicit declaration of function 'ldv_xmalloc' is invalid in C99 [-Wimplicit-function-declaration]
  return *(struct pgprot *)ldv_xmalloc(sizeof(struct pgprot));
                           ^
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:209334:11: warning: cast to 'struct pgprot *' from smaller integer type 'int' [-Wint-to-pointer-cast]
  return *(struct pgprot *)ldv_xmalloc(sizeof(struct pgprot));
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:209653:28: warning: implicit declaration of function 'ldv_xmalloc' is invalid in C99 [-Wimplicit-function-declaration]
  return *(struct pgprot *)ldv_xmalloc(sizeof(struct pgprot));
                           ^
../sv-benchmarks/c/ldv-linux-4.2-rc1/linux-4.2-rc1.tar.xz-32_7a-drivers--gpu--drm--i915--i915.ko-entry_point.cil.out.i:209653:11: warning: cast to 'struct pgprot *' from smaller integer type 'int' [-Wint-to-pointer-cast]
  return *(struct pgprot *)ldv_xmalloc(sizeof(struct pgprot));
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
PARSING ERROR

Unknown
